# droid

./: .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.docker/: README.md
.docker/laptop/: Dockerfile.laptop  Dockerfile.laptop_fr3  Dockerfile.laptop_panda  docker-compose-laptop-data-upload.yaml  docker-compose-laptop.yaml  entrypoint.sh
.docker/nuc/: Dockerfile.nuc  Dockerfile.nuc_fr3  Dockerfile.nuc_panda  docker-compose-nuc.yaml
.github/workflows/: build_container_laptop_fr3.yaml  build_container_laptop_panda.yaml  build_container_nuc_fr3.yaml  build_container_nuc_panda.yaml  pages.yaml  pre-commit.yaml
config/fr3/: franka_hardware.yaml  franka_panda.yaml
config/panda/: franka_hardware.yaml
docs/: _config.yml  contribution-guidelines.md  index.md  the-droid-dataset.md
docs/example-workflows/: calibrating-cameras.md  data-collection.md  evaluating-policies.md  example-workflows.md  teleoperation.md  training-policies.md
docs/hardware-setup/: assembly.md  hardware-setup.md  shopping-list.md
docs/software-setup/: docker.md  host-installation.md  software-setup.md
droid/: robot_env.py
droid/calibration/: calibration_info.json  calibration_utils.py
droid/camera_utils/: info.py
droid/controllers/: oculus_controller.py
droid/data_loading/: data_loader.py  dataset.py  tf_data_loader.py  trajectory_sampler.py
droid/data_processing/: data_transforms.py  timestep_processing.py
droid/evaluation/: eval_launcher.py  policy_wrapper.py  (+2 more)
scripts/: README.md  main.py  msgpack_numpy.py  postprocess.py  remote_eval.py  websocket_policy_client.py
(+69 files in other folders)
